# fernanda

./: .gitignore  CMakeLists.txt  README.md  fernanda.sln
fernanda/: CMakeLists.txt  cpp.hint  fernanda.cpp  fernanda.ui  fernanda.vcxproj  fernanda.vcxproj.filters  io.cpp  main.cpp  pane.cpp  pane_delegate.cpp  rc.cpp  texteditor.cpp
fernanda/docs/: dependencies.md  dependency tree.txt  dependency_tree.md  palette.md  todo.md
fernanda/docs/bit7z/: BUILD.txt
fernanda/docs/zips/: bit7z-v3.1.5-msvc2019_x64.7z  bit7z-v4.0.0-beta-msvc2019_x64.7z
fernanda/include/: fernanda.h  io.h  pane.h  pane_delegate.h  rc.h  texteditor.h  version.h
fernanda/include/microtar/: microtar.c  microtar.h
fernanda/rc/: fernanda.rc  fonts.qrc  sample.qrc  test.qrc  themes.qrc
fernanda/rc/sample/: sample.fernanda_theme  sample.fernanda_wintheme
fernanda/rc/themes/: editor.qss  window.qss
fernanda/res/: fonts.qrc  icons.qrc  lib.qrc  resource.rc  sample.qrc  themes.qrc
fernanda/res/sample/: Sample.fernanda_theme  Sample.fernanda_wintheme  sample.fernanda_theme  sample.fernanda_wintheme
fernanda/src/: archiver.cpp  archiver.h  bar.cpp  bar.h  colorbar.cpp  colorbar.h  delegate.h  dom.cpp  dom.h  editor.cpp  editor.h  fernanda.cpp  fernanda.h  index.h  indicator.cpp  indicator.h  io.cpp  io.h  keyfilter.cpp  keyfilter.h  main.cpp  pane.cpp  pane.h  pane_delegate.cpp  path.h  popup.h  project.cpp  project.h  rc.cpp  res.h  sample.h  splitter.h  startcop.h  story.cpp  story.h  texteditor.cpp  uni.cpp  uni.h  userdata.cpp  userdata.h  (+1 more)
fernanda/util/: win_pack.bat
(+37 files in other folders)
